<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menuLock"
        android:checkable="true"
        android:icon="@android:drawable/ic_media_pause"
        android:orderInCategory="100"
        android:title="Stop Sensor"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuRotation"
        android:checkable="true"
        android:icon="@drawable/rotate_toggle"
        android:orderInCategory="200"
        android:title="@string/Landscape"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuPIP"
        android:orderInCategory="300"
        android:title="@string/PIP"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuPERCENT"
        android:checkable="true"
        android:orderInCategory="400"
        android:title="@string/enablePERCENT"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuMODE"
        android:orderInCategory="500"
        android:title="@string/MODE"
        app:showAsAction="never">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menuMODE1"
                    android:orderInCategory="100"
                    android:title="@string/Horizontal"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menuMODE2"
                    android:orderInCategory="100"
                    android:title="@string/Vertical"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menuMODE3"
                    android:checked="true"
                    android:orderInCategory="100"
                    android:title="@string/Mix"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>